# src/api/models/Player.ts
@@ -6,12 +6,10 @@ import type { Level } from './Level';
 import type { PlayerBalance } from './PlayerBalance';
 import type { PlayerTaskTopic } from './PlayerTaskTopic';
 export type Player = {
-    id?: number;
-    version?: number;
-    maxTasks?: number;
-    agility?: number;
-    strength?: number;
-    intelligence?: number;
+    id: number;
+    agility: number;
+    strength: number;
+    intelligence: number;
     level?: Level;
     balance?: PlayerBalance;
     taskTopics?: Array<PlayerTaskTopic>;
